# f1_fantasy

./: .gitignore  LICENSE  README.md  f1-fantasy.spec  makefile  pyproject.toml  requirements.txt  test.http
.github/workflows/: package_app.yml
src/f1_fantasy/: __main__.py  consts.py  game_objects.py  main.py  models.py  settings.py
src/f1_fantasy/data/: constructors.json  drivers.json
src/f1_fantasy/data/constructor_prices/: 20240301.csv
src/f1_fantasy/data/driver_prices/: 20240301.csv
src/f1_fantasy/data/input/: chips.csv  current_team.csv  finishing_positions_race.csv  ignore_constructors.csv  ignore_drivers.csv  price_constructors.csv  price_drivers.csv  qualifying_finishing_positions.csv  race_finishing_positions.csv  special_points.csv
src/f1_fantasy/data/output/: 2024-03-02 06:30:28.448663
tests/: test_constructors.py  test_driver.py  test_main.py
tests/test_data/constructor_prices/: 20240301.csv
tests/test_data/driver_prices/: 20240301.csv
tests/test_data/input/: 20240301_qualifying_finishing_positions.csv  20240301_race_finishing_positions.csv
