[tool.poetry]
name = "f1-fantasy"
version = "0.1.0"
description = ""
authors = ["Peter <peterHoburg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "f1_fantasy", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
polars = "^0.20.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
