[tool.poetry]
name = "f1-fantasy"
version = "0.1.0"
description = ""
authors = ["Peter <peterHoburg@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "f1_fantasy", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py311"
fix = true
show-fixes = true

[tool.ruff.lint]

select = ["ALL"]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "COM812", # ruff format handles this
    "ISC001", # ruff format handles this

    # These will be reenabled
    "D",
    "TD",
    "FIX002"
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["f1_fantasy"]

[tool.pylint.main]
py-version = "3.11"
max-line-length = 120
